--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,4 +11,4 @@ jobs:
     - uses: actions/checkout@v2
     - name: REST API with curl
       run: |
-        curl "https://raw.githubusercontent.com/olbat/ut1-blacklists/master/blacklists/audio-video/domains" -o main/db.txt
+        curl -s -N "https://raw.githubusercontent.com/olbat/ut1-blacklists/master/blacklists/audio-video/domains" --create-dirs  -o main/db.txt
