--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - name: REST API with curl
       run: |
-        curl -s -N "https://raw.githubusercontent.com/olbat/ut1-blacklists/master/blacklists/audio-video/domains" --create-dirs  -o main/db.txt
+        curl -N "https://raw.githubusercontent.com/olbat/ut1-blacklists/master/blacklists/audio-video/domains" --create-dirs  -o main/db.txt
